--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,47 @@
 version: 2.1
-orbs:
-  node: circleci/node@1.1.6
+
 jobs:
-  build-and-test:
-    executor:
-      name: node/default
+  # The build job
+  build:
+    working_directory: ~/project
+    docker:
+      - image: circleci/node:6.10-browsers
     steps:
+      # Checkout the code from the branch into the working_directory
       - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm test
-workflows:
-  build-and-test:
-    jobs:
-      - build-and-test
+      # Log the current branch
+      - run:
+          name: Show current branch
+          command: echo ${CIRCLE_BRANCH}
+      # Restore local dependencies from cache
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
+      # Install project dependencies
+      - run:
+          name: Install local dependencies
+          command: npm install
+      # Cache local dependencies if they don't exist
+      - save_cache:
+          key: v1-dependencies-{{ checksum "package.json" }}
+          paths:
+            - node_modules
+      # Lint the source code
+      - run:
+          name: Lint
+          command: npm run lint
+      # Test the source code
+      - run:
+          name: Test
+          command: npm run test
+      # Build project with different configuration based on
+      # the current branch
+      - run:
+    name: Building
+    command: npm run build-dev
+    # Cache the dist folder for the deploy job
+    - save_cache:
+        key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+        paths:
+          - dist
