--- a/angular.json
+++ b/angular.json
@@ -100,6 +100,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
+            "tslintConfig": "tslint.json",
             "tsConfig": [
               "tsconfig.app.json",
               "tsconfig.spec.json",
