--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
     "ng": "ng",
     "start": "ng serve --env=local",
     "build": "ng build",
-    "build-dev": "ng build --target=development --environment=dev",
-    "build-staging": "ng build --target=production --environment=staging",
-    "build-prod": "ng build --prod",
+    "build-staging": "ng build --configuration=staging",
+    "build-prod": "ng build --configuration=production",
     "test": "ng test --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -29,13 +28,12 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.901.9",
     "@angular-devkit/build-angular": "~0.901.9",
     "@angular/cli": "~9.1.9",
     "@angular/compiler-cli": "~9.1.11",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.47",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -44,6 +42,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "lodash": "^4.16.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
