--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,3 +45,44 @@ jobs:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - dist
+
+    # The deploy job
+    deploy:
+      working_directory: ~/project
+      docker:
+        - image: circleci/node:12.0-browsers
+      steps:
+        # Log the current branch
+        - run:
+            name: Show current branch
+            command: echo ${CIRCLE_BRANCH}
+        # Restore cache from the build job which contains the
+        # dist folder that needs to be deployed
+        - restore_cache:
+            key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+        # Install AWS cli
+        - run:
+            name: Install aws cli
+            command:
+              sudo apt-get -y -qq install awscli
+        # Install AWS Amplify cli
+          - run:
+          name: Install amplify cli
+          command:
+            sudo npm install -g @aws-amplify/cli
+        # Deploy to the S3 bucket corresponding to the current branch
+        - run:
+            name: Deploy
+            command: amplify publish
+
+workflows:
+  version: 2
+  # The build and deploy workflow
+  build_and_deploy:
+    jobs:
+      - build
+      # The deploy job will only run on the filtered branches and
+      # require the build job to be successful before it starts
+      - deploy:
+          requires:
+            - build
