--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-prod": "ng build --configuration=production",
     "test": "ng test --code-coverage",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "post:build": "copyfiles amplify/**/* dist/amplify-tutorial"
   },
   "private": true,
   "dependencies": {
@@ -35,6 +36,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.47",
     "codelyzer": "^5.1.2",
+    "copyfiles": "^2.3.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
