--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "ng test --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "post:build": "copyfiles amplify/**/* dist/amplify-tutorial"
+    "postbuild": "copyfiles amplify/**/* dist/amplify-tutorial"
   },
   "private": true,
   "dependencies": {
