Adjust deploy script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,20 +60,16 @@ jobs:
       # dist folder that needs to be deployed
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      # Install AWS cli
-      - run:
-          name: Install AWS CLI
-          command:
-            sudo apt-get -y -qq install awscli
       # Install AWS Amplify cli
       - run:
           name: Install Amplify CLI
-          command:
-            sudo npm install -g @aws-amplify/cli
+          command: sudo npm install -g @aws-amplify/cli
       # Deploy to the S3 bucket corresponding to the current branch
       - run:
           name: Deploy
-          command: amplify publish
+          command:
+            cd dist/amplify-tutorial/
+            amplify publish
 
 workflows:
   version: 2
