Add more logging

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
       - image: circleci/node:12.0-browsers
         environment:
           ANGULAR_TEST: "{ \"SourceDir\":\"src\", \"DistributionDir\":\"dist/amplify-tutorial\", \"BuildCommand\":\"npm.cmd run-script build\", \"StartCommand\":\"ng serve\" }"
-          AMPLIFY_TEST: "{ \"projectName\":\"amplifyTutorial\", \"envName\": \"dev\" }"
+          AMPLIFY_TEST: "{ \"projectName\": \"amplifyTutorial\", \"envName\": \"dev\" }"
           FRONTEND_TEST: "{ \"frontend\": \"javascript\", \"framework\": \"angular\", \"config\": $ANGULAR_TEST }"
           AWS_CLOUD_FORMATION_CONFIG_TEST: "{ \"configLevel\": \"project\", \"useProfile\": false, \"accessKeyId\": $AWS_ACCESS_KEY_ID, \"secretAccessKey\": $AWS_SECRET_ACCESS_KEY, \"region\": \"eu-west-2\" }"
           PROVIDERS_TEST: "{ \"awscloudformation\": $AWS_CLOUD_FORMATION_CONFIG_TEST }"
@@ -78,6 +78,8 @@ jobs:
             echo $AMPLIFY_TEST
             echo $FRONTEND_TEST
             echo $PROVIDERS_TEST
+            echo AWS_CLOUD_FORMATION_CONFIG_TEST
+            echo ANGULAR_TEST
             amplify init --yes --amplify $AMPLIFY_TEST --frontend $FRONTEND_TEST --providers $PROVIDERS_TEST
             amplify publish --yes
 
