--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,10 +53,10 @@ jobs:
       - image: circleci/node:12.0-browsers
         environment:
           ANGULAR_TEST: "{ \"SourceDir\":\"src\", \"DistributionDir\":\"dist/amplify-tutorial\", \"BuildCommand\":\"npm.cmd run-script build\", \"StartCommand\":\"ng serve\" }"
-          AMPLIFY_TEST: "{ \"projectName\": \"amplifyTutorial\", \"envName\": \"dev\" }"
+          AMPLIFY_TEST: "{ \"projectName\":\"amplifyTutorial\", \"envName\": \"dev\", \"defaultEditor\": \"intellij\" }"
           FRONTEND_TEST: "{ \"frontend\": \"javascript\", \"framework\": \"angular\", \"config\": $ANGULAR_TEST }"
-          AWS_CLOUD_FORMATION_CONFIG_TEST: "{ \"configLevel\": \"project\", \"useProfile\": false, \"accessKeyId\": $AWS_ACCESS_KEY_ID, \"secretAccessKey\": $AWS_SECRET_ACCESS_KEY, \"region\": \"eu-west-2\" }"
-          PROVIDERS_TEST: "{ \"awscloudformation\": $AWS_CLOUD_FORMATION_CONFIG_TEST }"
+          AWS_CLOUD_FORMATION_CONFIG_TEST: "{ \"configLevel\": \"project\", \"useProfile\": false, \"profileName\": \"\", \"accessKeyId\": $AWS_ACCESS_KEY_ID, \"secretAccessKey\": $AWS_SECRET_ACCESS_KEY, \"region\": \"eu-west-2\" }"
+          PROVIDERS_TEST: "{ \"awscloudformation\": { \"configLevel\": \"project\", \"useProfile\": false, \"profileName\": \"\", \"accessKeyId\": $AWS_ACCESS_KEY_ID, \"secretAccessKey\": $AWS_SECRET_ACCESS_KEY, \"region\": \"eu-west-2\" } }"
     steps:
       # Log the current branch
       - run:
