--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,12 +51,6 @@ jobs:
     working_directory: ~/project
     docker:
       - image: circleci/node:12.0-browsers
-        environment:
-          ANGULAR_TEST: "{\"SourceDir\":\"src\",\"DistributionDir\":\"dist/amplify-tutorial\",\"BuildCommand\":\"npm.cmd run-script build\",\"StartCommand\":\"ng serve\"}"
-          AMPLIFY_TEST: "{\"projectName\":\"amplifyTutorial\",\"envName\":\"dev\",\"defaultEditor\":\"intellij\"}"
-          FRONTEND_TEST: "{\"frontend\":\"javascript\",\"framework\":\"angular\",\"config\":$ANGULAR_TEST}"
-          AWS_CLOUD_FORMATION_CONFIG_TEST: "{ \"configLevel\": \"project\", \"useProfile\": false, \"profileName\": \"\", \"accessKeyId\": $AWS_ACCESS_KEY_ID, \"secretAccessKey\": $AWS_SECRET_ACCESS_KEY, \"region\": \"eu-west-2\" }"
-          PROVIDERS_TEST: "{\"awscloudformation\":{\"configLevel\":\"project\",\"useProfile\":false,\"profileName\":\"\",\"accessKeyId\":$AWS_ACCESS_KEY_ID,\"secretAccessKey\":$AWS_SECRET_ACCESS_KEY,\"region\":\"eu-west-2\"}}"
     steps:
       # Log the current branch
       - run:
@@ -75,12 +69,7 @@ jobs:
           name: Deploy
           command: |
             cd dist/amplify-tutorial/
-            echo $AMPLIFY_TEST
-            echo $FRONTEND_TEST
-            echo $PROVIDERS_TEST
-            echo $AWS_CLOUD_FORMATION_CONFIG_TEST
-            echo $ANGULAR_TEST
-            amplify init --yes --amplify $AMPLIFY_TEST --frontend $FRONTEND_TEST --providers $PROVIDERS_TEST
+            amplify init --yes --amplify $AMPLIFY --frontend $FRONTEND --providers $PROVIDERS
             amplify publish --yes
 
 workflows:
