Cache bin directory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,11 @@ jobs:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - dist
+      # Cache the bin folder for the deploy job
+        - save_cache:
+        key: v1-bin-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+        paths:
+          - bin
 
   # The deploy job
   deploy:
@@ -60,6 +65,10 @@ jobs:
       # dist folder that needs to be deployed
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+      # Restore cache from the build job which contains the
+      # bin folder that needs to be deployed
+       - restore_cache:
+       key: v1-bin-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
       # Install AWS Amplify cli
       - run:
           name: Install Amplify CLI
