Prevent bundling amplify config with built artefact

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,9 +47,9 @@ jobs:
             - dist
       # Cache the bin folder for the deploy job
       - save_cache:
-          key: v1-bin-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          key: v1-amplify-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
-            - bin
+            - amplify
 
   # The deploy job
   deploy:
@@ -68,7 +68,7 @@ jobs:
       # Restore cache from the build job which contains the
       # bin folder that needs to be deployed
       - restore_cache:
-          key: v1-bin-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          key: v1-amplify-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
       # Install AWS Amplify cli
       - run:
           name: Install Amplify CLI
@@ -77,9 +77,6 @@ jobs:
       - run:
           name: Deploy
           command: |
-            cd dist/amplify-tutorial/
-            chmod +x ../../bin/amplify-headless-init.sh
-            ./../../bin/amplify-headless-init.sh
             amplify push --yes
             amplify publish --yes
 
