--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,7 @@ jobs:
       - run:
           name: Deploy
           command: |
+            amplify init --yes
             amplify push --yes
             amplify publish --yes
 
