--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,88 +1,75 @@
 version: 2.1
-
 jobs:
-  # The build job
   build:
     working_directory: ~/project
     docker:
-      - image: circleci/node:12.0-browsers
+      - image: 'circleci/node:12.0-browsers'
     steps:
-      # Checkout the code from the branch into the working_directory
       - checkout
-      # Log the current branch
       - run:
           name: Show current branch
-          command: echo ${CIRCLE_BRANCH}
-      # Restore local dependencies from cache
+          command: 'echo ${CIRCLE_BRANCH}'
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "package.json" }}
+            - 'v1-dependencies-{{ checksum "package.json" }}'
             - v1-dependencies-
-      # Install project dependencies
       - run:
           name: Install local dependencies
           command: npm install
-      # Cache local dependencies if they don't exist
       - save_cache:
-          key: v1-dependencies-{{ checksum "package.json" }}
+          key: 'v1-dependencies-{{ checksum "package.json" }}'
           paths:
             - node_modules
-      # Lint the source code
       - run:
           name: Lint
           command: npm run lint
-      # Test the source code
       - run:
           name: Test
           command: npm run test
-      # Build project with different configuration based on
-      # the current branch
       - run:
           name: Building
           command: npm run build
-      # Cache the dist folder for the deploy job
       - save_cache:
-          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          key: >-
+            v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1
+            }}
           paths:
             - dist
-      # Cache the bin folder for the deploy job
       - save_cache:
-          key: v1-bin-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          key: >-
+            v1-bin-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1
+            }}
           paths:
             - bin
-      # Cache the amplify folder for the deploy job
       - save_cache:
-          key: v1-amplify-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          key: >-
+            v1-amplify-{{ .Environment.CIRCLE_BRANCH }}-{{
+            .Environment.CIRCLE_SHA1 }}
           paths:
             - amplify
-
-  # The deploy job
   deploy:
     working_directory: ~/project
     docker:
-      - image: circleci/node:12.0-browsers
+      - image: 'circleci/node:12.0-browsers'
     steps:
-      # Log the current branch
       - run:
           name: Show current branch
-          command: echo ${CIRCLE_BRANCH}
-      # Restore cache from the build job which contains the
-      # dist folder that needs to be deployed
+          command: 'echo ${CIRCLE_BRANCH}'
       - restore_cache:
-          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      # Restore cache from the build job which contains the
-      # bin folder that needs to be deployed
-     - restore_cache:
-          key: v1-bin-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      # Restore cache from the build job which contains the
-      # amplify folder that needs to be deployed
+          key: >-
+            v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1
+            }}
       - restore_cache:
-          key: v1-amplify-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      # Install AWS Amplify cli
+          key: >-
+            v1-bin-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1
+            }}
+      - restore_cache:
+          key: >-
+            v1-amplify-{{ .Environment.CIRCLE_BRANCH }}-{{
+            .Environment.CIRCLE_SHA1 }}
       - run:
           name: Install Amplify CLI
           command: sudo npm install -g @aws-amplify/cli
-      # Deploy to AWS Amplify
       - run:
           name: Deploy
           command: |
@@ -90,15 +77,11 @@ jobs:
             ./bin/amplify-headless-init.sh
             amplify push --yes
             amplify publish --yes
-
 workflows:
   version: 2
-  # The build and deploy workflow
   build_and_deploy:
     jobs:
       - build
-      # The deploy job will only run on the filtered branches and
-      # require the build job to be successful before it starts
       - deploy:
           requires:
             - build
